--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,17 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>I am a passionate front-end developer with a strong focus on leveraging React.js to create exceptional 
+  and interactive web applications. With a solid foundation in modern web technologies and extensive experience 
+  in React development projects, I am dedicated to crafting intuitive user interfaces and delivering outstanding 
+  user experiences. My goal is to combine technical expertise with creativity to build visually appealing and highly 
+  functional web solutions using React.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
-
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+  <ul>
+  <h2>Skills Summary:</h2>
+    <li>Proficient in API integration and handling HTTP requests using technologies like Reac JS and Fetch API.</li>
+    <li>Extensive knowledge and hands-on experience in React.js and its ecosystem, including React Router, Redux, and Next.js.</li>
+    <li>Experience in integrating external APIs and utilizing libraries like Axios for efficient data retrieval.</li>
+    <li>Skilled in implementing responsive designs using CSS frameworks like Bootstrap in conjunction with React.</li>
+    <li>Extensive knowledge in HTML5, CSS3, and JavaScript, and their application in developing responsive and cross-browser compatible websites.</li>
+    <li> with testing frameworks such as Jest and Enzyme to ensure code reliability and maintainability.</li>
+    <li>Ability to collaborate effectively in cross-functional teams, leveraging React's component-based architecture for seamless integration with back-end systems.</li>
+  </ul>
