--- a/public/contact.html
+++ b/public/contact.html
@@ -1,7 +1,44 @@
-<h1>Contact Me</h1>
-<p>Tel: +3472880946</p>
-<p>Email: stevencanov@gmail.com</p>
-<p>NY </p>
-<p>
-  USA <br />
-</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Contact Me</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    p {
+      margin-bottom: 10px;
+    }
+
+    .contact-info {
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Contact Me</h1>
+    <p>Feel free to contact me using the information below:</p>
+
+    <div class="contact-info">
+      <p><strong>Email:</strong> <a href="mailto:stevencanov@gmail.com">stevencanov@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+13472880946">+1 347-288-0946</a></p>
+      <p><strong>Location:</strong> City, State, Country</p>
+    </div>
+  </div>
+</body>
+</html>
