--- a/public/contact.html
+++ b/public/contact.html
@@ -6,18 +6,34 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
     .container {
       max-width: 500px;
-      margin: 0 auto;
       padding: 20px;
       background-color: #fff;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1s ease-out;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     h1 {
       text-align: center;
+      margin-bottom: 20px;
     }
 
     p {
@@ -37,7 +53,7 @@
     <div class="contact-info">
       <p><strong>Email:</strong> <a href="mailto:stevencanov@gmail.com">stevencanov@gmail.com</a></p>
       <p><strong>Phone:</strong> <a href="tel:+13472880946">+1 347-288-0946</a></p>
-      <p><strong>Location:</strong> City, State, Country</p>
+      <p><strong>Location:</strong> Ny, USA</p>
     </div>
   </div>
 </body>
