--- a/public/about.html
+++ b/public/about.html
@@ -104,7 +104,7 @@
   <div class="container">
     <h1>About Me</h1>
     <div class="profile-image">
-      <img src="profile-image.jpg" alt="Profile Image">
+      <img src="assets/images/Screenshot 2023-05-29 at 11.20.30 AM.png" height="200" alt="Profile Image">
     </div>
     <!-- Information section -->
     <div class="info">
