--- a/index.html
+++ b/index.html
@@ -1,149 +1,33 @@
-<!DOCTYPE html>
-<html>
+POLÍTICA DE PRIVACIDAD
 
-<head>
-  <title>About Me</title>
+El presente Política de Privacidad establece los términos en que Tech Support NYC usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.
 
-      <!-- Style and animation Tag  CSS Section -->
+Información que es recogida
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-    }
+Nuestro sitio web podrá recoger información personal por ejemplo: Nombre, información de contacto como su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.
 
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+Uso de la información recogida
 
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 32px;
-      color: #333;
-    }
+Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios. Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento.
 
-    /* Cool style for h2 headings */
-    h2 {
-      position: relative;
-      font-size: 24px;
-      color: #333;
-      margin-bottom: 15px;
-    }
+Tech Support NYC está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado.
 
-    h2::before {
-      content: "";
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      width: 50px;
-      height: 2px;
-      background-color: #333;
-    }
+Cookies
 
-    p {
-      margin-bottom: 10px;
-      line-height: 1.5;
-      color: #666;
-    }
+Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico web, y también facilita las futuras visitas a una web recurrente. Otra función que tienen las cookies es que con ellas las web pueden reconocerte individualmente y por tanto brindarte el mejor servicio personalizado de su web.
 
-    ul {
-      margin-bottom: 10px;
-      line-height: 1.5;
-      color: #666;
-    }
+Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia. Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente . Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros servicios.
 
-    .profile-image {
-      display: block;
-      margin: 0 auto;
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      overflow: hidden;
-    }
+Enlaces a Terceros
 
-    .profile-image img {
-      width: 100%;
-      height: auto;
-    }
+Este sitio web pudiera contener en laces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas.
 
-    .info {
-      opacity: 0;
-      transform: translateY(30px);
-      transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-    }
+Control de su información personal
 
-    .animate {
-      opacity: 1;
-      transform: translateY(0);
-    }
+En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web. Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico. En caso de que haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento.
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
-    }
-  </style>
+Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con un orden judicial.
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var infoSection = document.querySelector('.info');
-      infoSection.classList.add('animate');
-    });
-  </script>
-</head>
+Tech Support NYC Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.
 
-<body>
-  <div class="container">
-    <h1>About Me</h1>
-    <div class="profile-image">
-      <img src="assets/images/Screenshot 2023-05-29 at 11.20.30 AM.png" height="200" alt="Profile Image">
-    </div>
-    <!-- Information section -->
-    <div class="info">
-      <p>I am a passionate front-end developer with a strong focus on leveraging React.js to create exceptional 
-        and interactive web applications. With a solid foundation in modern web technologies and extensive experience 
-        in React development projects, I am dedicated to crafting intuitive user interfaces and delivering outstanding 
-        user experiences. My goal is to combine technical expertise with creativity to build visually appealing and highly 
-        functional web solutions using React.</p>
-
-      <!-- Skills Summary -->
-      <h2>Skills Summary:</h2>
-      <ul>
-        <li>Proficient in API integration and handling HTTP requests using technologies like React JS and Fetch API.</li>
-        <li>Extensive knowledge and hands-on experience in React.js and its ecosystem, including React Router, Redux, and Next.js.</li>
-        <li>Experience in integrating external APIs and utilizing libraries like Axios for efficient data retrieval.</li>
-        <li>Skilled in implementing responsive designs using CSS frameworks like Bootstrap in conjunction with React.</li>
-        <li>Extensive knowledge in HTML5, CSS3, and JavaScript, and their application in developing responsive and cross-browser compatible websites.</li>
-        <li>Experience with testing frameworks such as Jest and Enzyme to ensure code reliability and maintainability.</li>
-        <li>Ability to collaborate effectively in cross-functional teams, leveraging React's component-based architecture for seamless integration with back-end systems.</li>
-      </ul>
-    </div>
- 
-
-      <!-- Achievements -->
-      <h2>Achievements:</h2>
-      <ul>
-        <li>Led the development of a React-based e-commerce platform that resulted in a 20% increase in sales conversion rates within three months.</li>
-        <li>Developed a dynamic dashboard using React and Redux, providing real-time data visualization and analytics for a client's marketing campaign.</li>
-        <li>Implemented server-side rendering (SSR) with Next.js for a content-heavy website, resulting in significantly improved SEO performance and page load times.</li>
-      </ul>
-
-      <!-- Education and Training -->
-      <h2>Education and Training:</h2>
-      <ul>
-        <li>Bachelor's Degree in Computer Science, Universidad Catolica.</li>
-        <li>React.js Certification, Udemy Online Learning Platform.</li>
-      </ul>
-    </div>
-  </div>
-</div>
-</body>
-</html>
+Esta politica de privacidad se han generado en politicadeprivacidadplantilla.com.
