--- a/index.html
+++ b/index.html
@@ -1,47 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soporte Técnico para Computadoras y Celulares</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Soporte Técnico para Computadoras y Celulares</h1>
-        <p>Tu solución confiable para reparar y mejorar tus dispositivos</p>
-    </header>
-    <div class="container">
-        <h2>Servicios que Ofrecemos</h2>
-        <p>En nuestro centro de soporte técnico, ofrecemos una amplia gama de servicios para satisfacer tus necesidades tecnológicas:</p>
-        <ul>
-            <li>Reparación de hardware y software</li>
-            <li>Reemplazo de pantallas</li>
-            <li>Transferencia de datos y copias de seguridad</li>
-            <li>Actualizaciones y mejoras de rendimiento</li>
-        </ul>
-        <h2>Contáctanos</h2>
-        <p>¿Necesitas ayuda con tus dispositivos? ¡Estamos aquí para ayudarte!</p>
-        <p>Puedes comunicarte con nosotros en <a href="tel:123456789">123-456-789</a> o enviar un correo electrónico a <a href="mailto:soporte@example.com">soporte@example.com</a>.</p>
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created React "/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>-- Luis Cano Portofolio --</title><script defer="defer" src="/static/js/main.db73ab00.js"></script><link href="/static/css/main.5eef76af.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
