--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created React "/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>-- Luis Cano Portofolio --</title><script defer="defer" src="/static/js/main.db73ab00.js"></script><link href="/static/css/main.5eef76af.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="/html-portfolio/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
+    <meta name="description" content="Web site created React "/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="apple-touch-icon" href="/html-portfolio/logo192.png"/>
+    <link rel="manifest" href="/html-portfolio/manifest.json"/>
+    <title>-- Luis Cano Portofolio --</title>
+    <script defer="defer" src="/html-portfolio/static/js/main.db73ab00.js"></script>
+    <link href="/html-portfolio/static/css/main.5eef76af.css" rel="stylesheet">
+</head>
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+</body>
+</html>
