--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="AdsBot-Google" content="index,follow" />
     <meta property="og:site_name" content="Luis">
     <meta property="og:title" content="Luis Cano | Home">
+    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="Luis">
     <meta name="twitter:card" content="summary">
