--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/hugo.png"
+            src="assets/images/Hugo.png"
             alt="netflic-clone"
             loading="lazy"
             class="project-pic"
